...
        <scene sceneID="gUD-AV-bIl">
            <objects>
                <tableViewController id="QfK-J6-wjn" customClass="RepeatsPicker" customModule="Rotations" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Eai-yc-tBr">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Sunday"/>
                                                            <state key="normal" title="SU">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Monday"/>
                                                            <state key="normal" title="MO">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Tuseday"/>
                                                            <state key="normal" title="TU">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Wednesday"/>
                                                            <state key="normal" title="WE">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Thursday"/>
                                                            <state key="normal" title="TH">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Friday"/>
                                                            <state key="normal" title="FR">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                            <accessibility key="accessibilityConfiguration" label="Saturday"/>
                                                            <state key="normal" title="SA">
                                                                <color key="titleColor" red="0.29803921570000003" green="0.85098039219999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            </state>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Repeats" id="UHY-0C-xiV">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="f6O-Qr-5KM">
                            <color key="tintColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.9404296875" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="ys1-zp-IgS">
                            <color key="tintColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.9404296875" alpha="1" colorSpace="calibratedRGB"/>
                        </barButtonItem>
...
                    </view>
                    <navigationItem key="navigationItem" title="Rotations" id="85n-zE-lMd">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="HCL-Wa-vKS" userLabel="Edit">
                            <color key="tintColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.9404296875" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
...
                                </textAttributes>
                                <items>
                                    <navigationItem title="Add" id="Aku-Ht-ueC">
                                        <barButtonItem key="leftBarButtonItem" title="Done" id="JVV-ja-hIJ">
                                            <connections>
                                                <action selector="donePressed:" destination="eIz-gm-FLx" id="16z-fD-dUw"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Groups" id="hWR-vc-RFz">
                        <rightBarButtonItems>
                            <barButtonItem systemItem="add" id="l9s-7b-hZU">
...
