...
            GroupTableView.reloadData()
            
            UserDefaults.standard.set(theGroups, forKey: "Groups")
            if UserDefaults.standard.object(forKey: "Name" + whatGroup) != nil {
                UserDefaults.standard.removeObject(forKey: "Name" + whatGroup)
            }
            if UserDefaults.standard.object(forKey: whatGroup + "Assignment") != nil {
                UserDefaults.standard.removeObject(forKey: whatGroup + "Assignment")
            }
            
            print(theGroups)
        }
    }
...
